--- a/.github/workflows/generate-client.yml
+++ b/.github/workflows/generate-client.yml
@@ -28,13 +28,10 @@ jobs:
         run: echo "DISPATCH_SHA=${{ github.event.client_payload.version }}" >> $GITHUB_ENV
 
       - name: Download OpenAPI JSON
-        run: npm run download:json
+        run: npm run download
 
       - name: Generate client
-        run: npm run generate:client
-
-      - name: Install & build client
-        run: npm run build:client
+        run: npm run generate
 
       - name: Publish to npm
         run: npm run publish
