--- a/config.json
+++ b/config.json
@@ -3,7 +3,6 @@
   "licenseName": "MIT",
   "apiPackage": "api",
   "modelPackage": "models",
-  "npmRepository": "git+https://github.com/hasadna/open-bus-api-client.git",
-  "supportsES6": true,
+  "axiosVersion": "latest",
   "withSeparateModelsAndApi": true
 }
