--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "type": "module",
   "description": "A client library for interacting with the Open-Bus API.",
   "homepage": "https://github.com/hasadna/open-bus-api-client#readme",
-  "repository": "git@github.com:hasadna/open-bus-api-client.git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hasadna/open-bus-api-client.git"
+  },
   "license": "MIT",
   "author": "hasadna",
   "keywords": [
