--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@hasadna/open-bus-api-client",
-  "version": "1.0.0-27215a2-20250806",
+  "version": "0.0.0",
   "description": "A client library for interacting with the Open-Bus API.",
   "author": "hasadna",
-  "repository": "git@github.com:hasadna/open-bus-api-client.git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hasadna/open-bus-api-client.git"
+  },
   "keywords": [
     "axios",
     "api",
@@ -25,5 +28,8 @@
     "@types/node": "12.11.5 - 12.20.42",
     "typescript": "^4.0 || ^5.0"
   },
-  "homepage": "https://github.com/hasadna/open-bus-api-client#readme"
+  "homepage": "https://github.com/hasadna/open-bus-api-client#readme",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/@hasadna/open-bus-api-client"
+  }
 }
