--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "open-bus-api-client",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
   "description": "A client library for interacting with the Open-Bus API.",
   "homepage": "https://github.com/hasadna/open-bus-api-client#readme",
@@ -26,5 +26,8 @@
     "@openapitools/openapi-generator-cli": "^2.21.4",
     "prettier": "^3.6.2",
     "rimraf": "^6.0.1"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/@hasadna/open-bus-api-client"
   }
 }
