--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "generate": "node scripts/generate.js",
     "publish": "node scripts/publish.js"
   },
+  "dependencies": {
+    "axios": "^1.11.0"
+  },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.21.4",
     "prettier": "^3.6.2",
