--- a/.github/workflows/generate-client.yml
+++ b/.github/workflows/generate-client.yml
@@ -70,14 +70,17 @@ jobs:
       - name: Install root dependencies
         run: npm install
 
-      # - name: Download JSON for production
+      # - name: Download json form production
       #   if: github.event_name == 'repository_dispatch'
       #   run: npm run download
-
-      - name: Clone Open Bus Stride API and Download JSON
+      - name: Setup Python
+        # if: github.event_name == 'workflow_dispatch'
       - uses: actions/setup-python@v4
         with:
           python-version: "3.8"
+
+      - name: Clone open-bus-stride-api and Download JSON
+        # if: github.event_name == 'workflow_dispatch'
       - run: |
           git clone https://github.com/hasadna/open-bus-stride-api.git ./open-bus-stride-api
           git clone https://github.com/hasadna/open-bus-stride-db.git ./open-bus-stride-db
@@ -93,6 +96,7 @@ jobs:
           sleep 15
 
           curl -L http://localhost:8000/openapi.json -o openapi.json
+
           if [ ! -f openapi.json ]; then
             echo "Failed to download OpenAPI JSON"
             exit 1
