--- a/.github/workflows/generate-client.yml
+++ b/.github/workflows/generate-client.yml
@@ -86,6 +86,7 @@ jobs:
           pip install --upgrade pip
           pip install -r requirements.txt
           pip install -r ../open-bus-stride-db/requirements.txt
+          pip install -e ../open-bus-stride-db
 
           uvicorn open_bus_stride_api.main:app --host 0.0.0.0 --port 8000 &
 
