--- a/.github/workflows/generate-client.yml
+++ b/.github/workflows/generate-client.yml
@@ -90,11 +90,11 @@ jobs:
 
           uvicorn open_bus_stride_api.main:app --host 0.0.0.0 --port 8000 &
 
-          sleep 15
+          sleep 5
 
-          curl -L http://localhost:8000/openapi.json -o openapi.json
+          curl -L http://localhost:8000/openapi.json -o ../openapi.json
 
-          if [ ! -f openapi.json ]; then
+          if [ ! -f ../openapi.json ]; then
             echo "Failed to download OpenAPI JSON"
             exit 1
           fi
