--- a/.github/workflows/generate-client.yml
+++ b/.github/workflows/generate-client.yml
@@ -92,9 +92,11 @@ jobs:
 
           sleep 5
 
-          curl -L http://localhost:8000/openapi.json -o ../openapi.json
+          cd ..
 
-          if [ ! -f ../openapi.json ]; then
+          curl -L http://localhost:8000/openapi.json -o openapi.json
+
+          if [ ! -f openapi.json ]; then
             echo "Failed to download OpenAPI JSON"
             exit 1
           fi
