--- a/.github/workflows/generate-client.yml
+++ b/.github/workflows/generate-client.yml
@@ -46,12 +46,19 @@ jobs:
             exit 1
           fi
 
+          echo "Semver fragment: $FRAGMENT"
           echo "fragment=$FRAGMENT" >> "$GITHUB_OUTPUT"
 
       - name: Get current version from package.json
         id: get-version
         run: |
           VERSION=$(node -p "require('./package.json').version")
+          if [ -z "$VERSION" ]; then
+            echo "Failed to get version from package.json"
+            exit 1
+          fi
+
+          echo "Current version: $VERSION"
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Bump version
@@ -61,8 +68,6 @@ jobs:
         with:
           current-version: ${{ steps.get-version.outputs.version }}
           version-fragment: ${{ steps.semver.outputs.fragment }}
-
-      - name: Write new version to package.json
         run: |
           NEW_VERSION=${{ steps.version.outputs.next-version }}
           node -e "let p=require('./package.json'); p.version='${NEW_VERSION}'; require('fs').writeFileSync('./package.json', JSON.stringify(p, null, 2) + '\n')"
