--- a/.github/workflows/generate-client.yml
+++ b/.github/workflows/generate-client.yml
@@ -68,7 +68,7 @@ jobs:
         with:
           current-version: ${{ steps.get-version.outputs.version }}
           version-fragment: ${{ steps.semver.outputs.fragment }}
-        run: |
+      - run: |
           NEW_VERSION=${{ steps.version.outputs.next-version }}
           node -e "let p=require('./package.json'); p.version='${NEW_VERSION}'; require('fs').writeFileSync('./package.json', JSON.stringify(p, null, 2) + '\n')"
 
