fix: bump ver set ""

--- a/.github/workflows/generate-client.yml
+++ b/.github/workflows/generate-client.yml
@@ -62,15 +62,17 @@ jobs:
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Bump version
-        if: steps.semver.outputs.fragment != 'skip' && steps.semver.outputs.fragment != 'none'
+        if: steps.semver.outputs.fragment != 'skip'
         id: version
         uses: christian-draeger/increment-semantic-version@1.2.3
         with:
           current-version: ${{ steps.get-version.outputs.version }}
           version-fragment: ${{ steps.semver.outputs.fragment }}
       - run: |
-          NEW_VERSION=${{ steps.version.outputs.next-version }}
-          node -e "let p=require('./package.json'); p.version='${NEW_VERSION}'; require('fs').writeFileSync('./package.json', JSON.stringify(p, null, 2) + '\n')"
+          if [ ${ steps.semver.outputs.fragment } != "skip" ]; then
+            NEW_VERSION=${{ steps.version.outputs.next-version }}
+            node -e "let p=require('./package.json'); p.version='${NEW_VERSION}'; require('fs').writeFileSync('./package.json', JSON.stringify(p, null, 2) + '\n')"
+          fi
 
       - name: Install root dependencies
         run: npm install
