--- a/.github/workflows/generate-client.yml
+++ b/.github/workflows/generate-client.yml
@@ -123,7 +123,7 @@ jobs:
           pip install -e ../open-bus-stride-db
 
           SHA=$(git log -1 --format=%H)
-          echo "VERSION = '$SHA'" > open_bus_stride_api/version.py          echo "VERSION = '$SHA'" > open_bus_stride_api/version.py
+          echo "VERSION = '$SHA'" > open_bus_stride_api/version.py
 
           uvicorn open_bus_stride_api.main:app --host 0.0.0.0 --port 8000 &
 
