--- a/.github/workflows/generate-client.yml
+++ b/.github/workflows/generate-client.yml
@@ -8,12 +8,12 @@ on:
         required: false
         type: choice
         options:
-          - none # Generate client, Skip publish
+          - test-workflow # Test Generate client, Skip publish
+          - test-repository # Test Generate client, Skip publish
           - skip # No version bump, but still publish
           - patch # For bug fixes
           - minor # For new features that are backward compatible
           - major # For changes that break backward compatibility
-        default: none
 
   repository_dispatch:
     types: [generate-client]
@@ -33,36 +33,59 @@ jobs:
         with:
           node-version: latest
 
-      - name: Determine semver fragment
-        id: semver
+      - name: Set up Node.js environment
+        id: classify
         run: |
-          FRAGMENT="${{ github.event.inputs.semver-fragment }}"
-          if [ -z "$FRAGMENT" ]; then
-            FRAGMENT="${{ github.event.client_payload.semver-fragment }}"
+          FRAGMENT_TYPE="${{ github.event.inputs.semver-fragment }}"
+          if [ -z "$FRAGMENT_TYPE" ]; then
+          FRAGMENT_TYPE="${{ github.event.client_payload.semver-fragment }}"
           fi
 
-          if [[ "$FRAGMENT" != "none" && "$FRAGMENT" != "skip" && "$FRAGMENT" != "patch" && "$FRAGMENT" != "minor" && "$FRAGMENT" != "major" ]]; then
-            echo "Invalid semver fragment: $FRAGMENT"
+          TEST_TYPE=""
+          case "$FRAGMENT_TYPE" in
+            test-workflow)
+              echo "This is a test workflow run, skipping version bump and publish."
+              FRAGMENT_TYPE="test"
+              TEST_TYPE="workflow"
+              ;;
+            test-repository)
+              echo "This is a test repository dispatch run, skipping version bump and publish."
+              FRAGMENT_TYPE="test"
+              TEST_TYPE="repository"
+              ;;
+          esac
+              
+          if [[ "$FRAGMENT_TYPE" != "test" && "$FRAGMENT_TYPE" != "skip" && "$FRAGMENT_TYPE" != "patch" && "$FRAGMENT_TYPE" != "minor" && "$FRAGMENT_TYPE" != "major" ]]; then
+            echo "Invalid semver fragment: $FRAGMENT_TYPE"
             exit 1
           fi
-
-          echo "fragment=$FRAGMENT" >> "$GITHUB_OUTPUT"
+              
+          echo "Final semver fragment: $FRAGMENT_TYPE"
+          echo "fragment=$FRAGMENT_TYPE" >> "$GITHUB_OUTPUT"
+          echo "test=$TEST_TYPE" >> "$GITHUB_OUTPUT"
 
       - name: Get current version from package.json
         id: get-version
         run: |
           VERSION=$(node -p "require('./package.json').version")
+          if [ -z "$VERSION" ]; then
+            echo "Failed to get version from package.json"
+            exit 1
+          fi
+
+          echo "Current version: $VERSION"
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
       - name: Bump version
-        if: steps.semver.outputs.fragment != 'skip' && steps.semver.outputs.fragment != 'none'
+        if: steps.classify.outputs.fragment != 'skip' && steps.classify.outputs.fragment != 'test'
         id: version
         uses: christian-draeger/increment-semantic-version@1.2.3
         with:
           current-version: ${{ steps.get-version.outputs.version }}
-          version-fragment: ${{ steps.semver.outputs.fragment }}
+          version-fragment: ${{ steps.classify.outputs.fragment }}
 
-      - name: Write new version to package.json
+      - name: Set new version in package.json
+        if: steps.classify.outputs.fragment != 'skip' && steps.classify.outputs.fragment != 'test'
         run: |
           NEW_VERSION=${{ steps.version.outputs.next-version }}
           node -e "let p=require('./package.json'); p.version='${NEW_VERSION}'; require('fs').writeFileSync('./package.json', JSON.stringify(p, null, 2) + '\n')"
@@ -70,27 +93,47 @@ jobs:
       - name: Install root dependencies
         run: npm install
 
+      - name: Download Json Schem
+        if: github.event_name == 'workflow_dispatch' || steps.classify.outputs.test == 'workflow'
+        run: |
+          npm run download
+          if [ ! -f openapi.json ]; then
+            echo "OpenAPI JSON not found after download"
+            exit 1
+          fi
+
       - name: Setup Python
+        if: github.event_name == 'repository_dispatch' || steps.classify.outputs.test == 'repository'
         uses: actions/setup-python@v4
         with:
           python-version: "3.8"
 
-      - name: Clone open-bus-stride-api and Download JSON
+      - name: Clone open-bus-stride-api and Download JSON Schema
+        if: github.event_name == 'repository_dispatch' || steps.classify.outputs.test == 'repository'
         run: |
-          git clone https://github.com/hasadna/open-bus-stride-api.git ./open-bus-stride-api
-          git clone https://github.com/hasadna/open-bus-stride-db.git ./open-bus-stride-db
+          git clone https://github.com/hasadna/open-bus-stride-api.git tmp/open-bus-stride-api
+          git clone https://github.com/hasadna/open-bus-stride-db.git tmp/open-bus-stride-db
 
-          cd open-bus-stride-api
+          cd tmp/open-bus-stride-api
           python -m venv venv
           source venv/bin/activate
-          pip install -r open-bus-stride-api/requirements.txt
+          pip install --upgrade pip
+          pip install -r requirements.txt
           pip install -r ../open-bus-stride-db/requirements.txt
+          pip install -e ../open-bus-stride-db
+
+          SHA=$(git log -1 --format=%H)
+          echo "VERSION = '$SHA'" > open_bus_stride_api/version.py
 
           uvicorn open_bus_stride_api.main:app --host 0.0.0.0 --port 8000 &
 
-          sleep 15
+          sleep 5
+
+          cd ../../
 
           curl -L http://localhost:8000/openapi.json -o openapi.json
+
+          rm -rf tmp
 
           if [ ! -f openapi.json ]; then
             echo "Failed to download OpenAPI JSON"
@@ -101,32 +144,30 @@ jobs:
         run: npm run generate
 
       - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: generated-client
+          path: client
 
       - name: Publish to npm
-        run: |
-          if [ "${{ steps.semver.outputs.fragment }}" = "none" ]; then
-            echo "Skipping npm publish as semver fragment is 'none'"
-            exit 0
-          fi
-          npm run publish
+        if: steps.classify.outputs.fragment != 'skip' && steps.classify.outputs.fragment != 'test'
+        run: npm run publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Commit and push regenerated client
+        if: steps.classify.outputs.fragment != 'skip' && steps.classify.outputs.fragment != 'test'
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -m "chore: bump version to ${{ steps.increment.outputs.next-version }}"
+          git commit -m "chore: bump version to ${{ steps.version.outputs.next-version }}"
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create and push Git tag
-        if: steps.semver-fragment.outputs.fragment != 'skip'
+        if: steps.classify.outputs.fragment != 'skip' && steps.classify.outputs.fragment != 'test'
         run: |
           TAG="v${{ steps.version.outputs.next-version }}"
           git tag "$TAG"
