--- a/config.json
+++ b/config.json
@@ -3,5 +3,6 @@
   "licenseName": "MIT",
   "apiPackage": "api",
   "modelPackage": "models",
-  "withSeparateModelsAndApi": true
+  "withSeparateModelsAndApi": false,
+  "paramNaming": "camelCase"
 }
