--- a/.github/workflows/generate-client.yml
+++ b/.github/workflows/generate-client.yml
@@ -32,6 +32,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: latest
+          registry-url: "https://npm.pkg.github.com"
+          scope: "@hasadna"
 
       - name: Set up Node.js environment
         id: classify
