--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,19 @@
     "type": "git",
     "url": "https://github.com/hasadna/open-bus-api-client.git"
   },
+  "license": "MIT",
+  "main": "./dist/index.js",
+  "typings": "./dist/index.d.ts",
+  "module": "./dist/esm/index.js",
+  "sideEffects": false,
+  "scripts": {
+    "build": "tsc && tsc -p tsconfig.esm.json",
+    "prepare": "npm run build"
+  },
+  "devDependencies": {
+    "typescript": "^4.0 || ^5.0"
+  },
+  "homepage": "https://github.com/hasadna/open-bus-api-client#readme",
   "keywords": [
     "axios",
     "api",
@@ -14,22 +27,7 @@
     "client",
     "openapi-generator"
   ],
-  "license": "MIT",
-  "main": "./dist/index.js",
-  "typings": "./dist/index.d.ts",
-  "scripts": {
-    "build": "tsc",
-    "prepare": "npm run build"
-  },
-  "dependencies": {
-    "axios": "^1.11.0"
-  },
-  "devDependencies": {
-    "@types/node": "12.11.5 - 12.20.42",
-    "typescript": "^4.0 || ^5.0"
-  },
-  "homepage": "https://github.com/hasadna/open-bus-api-client#readme",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/@hasadna/open-bus-api-client"
+    "registry": "https://npm.pkg.github.com/"
   }
 }
