--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,15 +1,10 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "target": "ES5",
+    "target": "es6",
     "module": "commonjs",
-    "noImplicitAny": true,
+    "moduleResolution": "node",
     "outDir": "dist",
-    "rootDir": ".",
-    "lib": [
-      "es6",
-      "dom"
-    ],
     "typeRoots": [
       "node_modules/@types"
     ]
