--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,8 @@
   "license": "MIT",
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
-  "module": "./dist/esm/index.js",
-  "sideEffects": false,
   "scripts": {
-    "build": "tsc && tsc -p tsconfig.esm.json",
+    "build": "tsc",
     "prepare": "npm run build"
   },
   "devDependencies": {
