--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,10 +1,14 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "target": "es6",
+    "target": "es5",
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "dist",
+    "lib": [
+      "es6",
+      "dom"
+    ],
     "typeRoots": [
       "node_modules/@types"
     ]
