--- a/.github/workflows/generate-client.yml
+++ b/.github/workflows/generate-client.yml
@@ -61,7 +61,7 @@ jobs:
         uses: christian-draeger/increment-semantic-version@1.2.3
         with:
           current-version: ${{ steps.get-version.outputs.version }}
-          version-fragment: ${{ steps.settings.outputs.fragment == 'test' && 'minor' || steps.settings.outputs.fragment }}
+          version-fragment: ${{ steps.settings.outputs.fragment == 'test' && 'patch' || steps.settings.outputs.fragment }}
 
       - name: Set new version in package.json
         if: steps.settings.outputs.fragment != 'skip'
